2 Autentificare client+sesiuni+conexiune cu baza de date

--- a/Contact.html
+++ b/Contact.html
@@ -40,7 +40,7 @@
                 <li><a href="Evenimente-speciale.php">Evenimente speciale</a></li>
                 <li><a href="Contact.html">Contact</a></li>
                 <li><a href="Parerea-dumnevoastra.html">Părerea dumneavoastră</a></li>
-                <li><a href="Autentificare-administrator.html">Autentificare administrator</a></li>
+                <li><a href="Autentificare.php">Autentificare</a></li>
             </ul>
         </nav>
     </div>
