3 Modificare schimbare pagini in functie de rol

--- a/Contact_admin.html
+++ b/Contact_admin.html
@@ -36,7 +36,7 @@
         </div>
         <nav id="nav">
             <ul>
-                <li class="active"><a href="PaginaAdministrator.php">Meniu</a></li>
+                <li class="active"><a href="Meniu_admin.php">Meniu</a></li>
                 <li><a href="Evenimente-speciale_admin.php">Evenimente speciale</a></li>
                 <li><a href="Contact_admin.html">Contact</a></li>
                 <li><a href="Parerea-dumnevoastra_admin.html">Părerea dumneavoastră</a></li>
