--- a/Contact_client.html
+++ b/Contact_client.html
@@ -36,11 +36,11 @@
         </div>
         <nav id="nav">
             <ul>
-                <li class="active"><a href="index.php">Meniu</a></li>
-                <li><a href="Evenimente-speciale_vizitator.php">Evenimente speciale</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Parerea-dumnevoastra.html">Părerea dumneavoastră</a></li>
-                <li><a href="Autentificare.php">Autentificare</a></li>
+                <li ><a href="Meniu_client.php">Meniu</a></li>
+                <li><a href="Evenimente-speciale_client.php">Evenimente speciale</a></li>
+                <li><a href="Contact_client.html">Contact</a></li>
+                <li><a href="Parerea-dumnevoastra_client.html">Părerea dumneavoastră</a></li>
+                <li><a href="Logout.html">Logout</a></li>
             </ul>
         </nav>
     </div>
@@ -59,9 +59,9 @@
     <div id="extra">
         <div class="container">
 
-             <p style="color:white; font-size: 40px" >Telefon: 0728542628</p>
-                <p style="color:white; font-size: 40px" >Locație: Strada Ion Creanga, nr. 64b</p>
-                <p style="color:white; font-size: 40px" >Mail: bluejeansrest@gmail.com</p>
+            <p style="color:white; font-size: 40px" >Telefon: 0728542628</p>
+            <p style="color:white; font-size: 40px" >Locație: Strada Ion Creanga, nr. 64b</p>
+            <p style="color:white; font-size: 40px" >Mail: bluejeansrest@gmail.com</p>
 
 
         </div>
