--- a/Logout.html
+++ b/Logout.html
@@ -25,12 +25,12 @@
 				<!-- Header -->
 					<div id="header" class="skel-panels-fixed">
 						<div id="logo">
-							<h1><a href="PaginaAdministrator.php">BlueJEANS</a></h1>
+							<h1><a href="Meniu_admin.php">BlueJEANS</a></h1>
 
 						</div>
 						<nav id="nav">
 							<ul>
-								<li ><a href="PaginaAdministrator.php">Meniu</a></li>
+								<li ><a href="Meniu_admin.php">Meniu</a></li>
 								<li><a href="Evenimente-speciale_admin.php">Evenimente speciale</a></li>
 								<li><a href="Contact_admin.html">Contact</a></li>
 								<li><a href="Parerea-dumneavoastra_admin.html">Părerea dumneavoastră</a></li>
@@ -44,7 +44,7 @@
 				<!-- Banner -->
 					<div id="banner" class="container">
 						<section>
-							<p>Logout administrator</p>
+							<p>Logout</p>
 						</section>
 					</div>
 
