4 Adaugare cos de cumparaturi+legaturi, realizare logout client+legaturi

--- a/Logout_client.html
+++ b/Logout_client.html
@@ -1,9 +1,3 @@
-<!DOCTYPE HTML>
-<!--
-	Phase Shift by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 <head>
     <title>Restaurant BlueJEANS</title>
@@ -31,42 +25,34 @@
     <!-- Header -->
     <div id="header" class="skel-panels-fixed">
         <div id="logo">
-            <h1><a href="index.php">BlueJEANS</a></h1>
+            <h1><a href="Meniu_client.php">BlueJEANS</a></h1>
 
         </div>
         <nav id="nav">
             <ul>
-                <li class="active"><a href="index.php">Meniu</a></li>
-                <li><a href="Evenimente-speciale_vizitator.php">Evenimente speciale</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Parerea-dumnevoastra.html">Părerea dumneavoastră</a></li>
-                <li><a href="Autentificare.php">Autentificare</a></li>
+                <li ><a href="Meniu_client.php">Meniu</a></li>
+                <li><a href="Evenimente-speciale_client.php">Evenimente speciale</a></li>
+                <li><a href="Contact_client.html">Contact</a></li>
+                <li><a href="Parerea-dumnevoastra_client.html">Părerea dumneavoastră</a></li>
+                <li><a href="Cos_client.php">Cos</a></li>
+                <li><a href="Logout_client.html">Logout</a></li>
+
             </ul>
         </nav>
     </div>
 
 
     <!-- Banner -->
-
     <div id="banner" class="container">
         <section>
-            <p><strong> CONTACT</strong> restaurant </p>
+            <p>Logout</p>
         </section>
     </div>
 
+    <form action="Logout_admin.php" method="post">
+        <input font size="6"  color=00000  name="logout" align="center" type="submit" value="logout"></font>
 
-    <!-- Extra -->
-    <div id="extra">
-        <div class="container">
-
-             <p style="color:white; font-size: 40px" >Telefon: 0728542628</p>
-                <p style="color:white; font-size: 40px" >Locație: Strada Ion Creanga, nr. 64b</p>
-                <p style="color:white; font-size: 40px" >Mail: bluejeansrest@gmail.com</p>
-
-
-        </div>
-    </div>
-
+    </form>
 </div>
 </body>
 </html>
