--- a/Contact_admin.html
+++ b/Contact_admin.html
@@ -40,7 +40,7 @@
                 <li><a href="Evenimente-speciale_admin.php">Evenimente speciale</a></li>
                 <li><a href="Contact_admin.html">Contact</a></li>
                 <li><a href="Parerea-dumnevoastra_admin.html">Părerea dumneavoastră</a></li>
-                <li><a href="Logout.html">Logout</a></li>
+                <li><a href="Logout_admin.html">Logout</a></li>
             </ul>
         </nav>
     </div>
