--- a/Contact_vizitator.html
+++ b/Contact_vizitator.html
@@ -31,18 +31,16 @@
     <!-- Header -->
     <div id="header" class="skel-panels-fixed">
         <div id="logo">
-            <h1><a href="Meniu_client.php">BlueJEANS</a></h1>
+            <h1><a href="index.php">BlueJEANS</a></h1>
 
         </div>
         <nav id="nav">
             <ul>
-                <li ><a href="Meniu_client.php">Meniu</a></li>
-                <li><a href="Evenimente-speciale_client.php">Evenimente speciale</a></li>
-                <li><a href="Contact_client.html">Contact</a></li>
-                <li><a href="Parerea-dumnevoastra_client.html">Părerea dumneavoastră</a></li>
-                <li><a href="Cos_client.php">Cos</a></li>
-                <li><a href="Logout_client.html">Logout</a></li>
-
+                <li class="active"><a href="index.php">Meniu</a></li>
+                <li><a href="Evenimente-speciale_vizitator.php">Evenimente speciale</a></li>
+                <li><a href="Contact_vizitator.html">Contact</a></li>
+                <li><a href="Parerea-dumnevoastra.html">Păreri</a></li>
+                <li><a href="Autentificare.php">Autentificare</a></li>
             </ul>
         </nav>
     </div>
@@ -61,9 +59,9 @@
     <div id="extra">
         <div class="container">
 
-            <p style="color:white; font-size: 40px" >Telefon: 0728542628</p>
-            <p style="color:white; font-size: 40px" >Locație: Strada Ion Creanga, nr. 64b</p>
-            <p style="color:white; font-size: 40px" >Mail: bluejeansrest@gmail.com</p>
+             <p style="color:white; font-size: 40px" >Telefon: 0728542628</p>
+                <p style="color:white; font-size: 40px" >Locație: Strada Ion Creanga, nr. 64b</p>
+                <p style="color:white; font-size: 40px" >Mail: bluejeansrest@gmail.com</p>
 
 
         </div>
