Adaugare pagini de pareri si rezolvare problema la inregistrare

--- a/Logout_admin.html
+++ b/Logout_admin.html
@@ -33,7 +33,7 @@
 								<li ><a href="Meniu_admin.php">Meniu</a></li>
 								<li><a href="Evenimente-speciale_admin.php">Evenimente speciale</a></li>
 								<li><a href="Contact_admin.html">Contact</a></li>
-								<li><a href="Parerea-dumneavoastra_admin.html">Părerea dumneavoastră</a></li>
+								<li><a href="Parere_admin.php">Pareri</a></li>
 								<li><a href="Logout_admin.html">Logout</a></li>
 
 							</ul>
