--- a/Contact_admin.html
+++ b/Contact_admin.html
@@ -39,7 +39,7 @@
                 <li class="active"><a href="Meniu_admin.php">Meniu</a></li>
                 <li><a href="Evenimente-speciale_admin.php">Evenimente speciale</a></li>
                 <li><a href="Contact_admin.html">Contact</a></li>
-                <li><a href="Parerea-dumnevoastra_admin.html">Părerea dumneavoastră</a></li>
+                <li><a href="Parere_admin.php">Pareri</a></li>
                 <li><a href="Logout_admin.html">Logout</a></li>
             </ul>
         </nav>
