--- a/Contact_vizitator.html
+++ b/Contact_vizitator.html
@@ -39,7 +39,7 @@
                 <li class="active"><a href="index.php">Meniu</a></li>
                 <li><a href="Evenimente-speciale_vizitator.php">Evenimente speciale</a></li>
                 <li><a href="Contact_vizitator.html">Contact</a></li>
-                <li><a href="Parerea-dumnevoastra.html">Păreri</a></li>
+                <li><a href="Parere_vizitator.php">Pareri</a></li>
                 <li><a href="Autentificare.php">Autentificare</a></li>
             </ul>
         </nav>
