--- a/Contact_client.html
+++ b/Contact_client.html
@@ -41,6 +41,8 @@
                 <li><a href="Contact_client.html">Contact</a></li>
                 <li><a href="Parere_client.php">Pareri</a></li>
                 <li><a href="Cos_client.php">Cos</a></li>
+                <li><a href="Comenzi.php">Comenzi</a></li>
+
                 <li><a href="Logout_client.html">Logout</a></li>
 
             </ul>
