--- a/Logout_admin.html
+++ b/Logout_admin.html
@@ -34,6 +34,7 @@
 								<li><a href="Evenimente-speciale_admin.php">Evenimente speciale</a></li>
 								<li><a href="Contact_admin.html">Contact</a></li>
 								<li><a href="Parere_admin.php">Pareri</a></li>
+								<li><a href="Comenzi_admin.php">Comenzi</a></li>
 								<li><a href="Logout_admin.html">Logout</a></li>
 
 							</ul>
